--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,145 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.header{
+  height: 800px;
+  padding: 30px 80px 40px;
+  background-color: #fff;
+  background-image: url(../images/background_header.svg);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.header__title{
+  max-width: 729px;
+  margin: 183px 0 0;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+}
+
+.header__discription{
+  max-width: 683px;
+  margin: 28px 0 0;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__span-accent{
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  color: #3F96F3;
+
+}
+
+.header__image{
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  width: 646px;
+  height: 568px;
+}
+
+.header__footer{
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f
+}
+
+
+.header__paragraph{
+  margin: 0;
+}
+
+.nav{
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo{
+  width: 105px;
+  height: 39px;
+  position: relative;
+  left: -50px;
+}
+
+.nav__links{
+display: flex;
+gap: 20px;
+list-style-type: none;
+margin: 0;
+padding: 0;
+}
+
+.nav__link{
+  color: #000;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px
+}
+
+.recipes{
+  color: #fff;
+  background-color: #0a2750;
+  background-image: url(../images/background_recipes.svg);
+  padding: 100px 80px 215px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.recipes__title{
+  margin: 0 0 24px;
+  max-width: 580px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.recipes__subtitle{
+  margin: 0 0 80px;
+  max-width: 438px;
+  font-family: "Noto Serif","Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.recipes__iframes{
+  border: 0;
+  width: 480px;
+  height: 273px;
+}
+
+.recipes__videos{
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
+  padding: 0;
+  justify-content: center;
+}
+
+.recipes__video-caption{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px
+  margin-top: 24px;
+}
+
