--- a/pages/index.css
+++ b/pages/index.css
@@ -144,7 +144,7 @@ padding: 0;
   justify-content: space-between;
   font-weight: 500;
   font-size: 20px;
-  line-height: 30px
+  line-height: 30px;
   margin-top: 24px;
 }
 
