--- a/pages/index.css
+++ b/pages/index.css
@@ -28,7 +28,7 @@
   letter-spacing: -0.6px;
 }
 
-.header__discription{
+.header__description{
   max-width: 683px;
   margin: 28px 0 0;
   font-family: "Noto Serif", "Times New Roman", serif;
@@ -125,7 +125,7 @@ padding: 0;
   line-height: 30px;
 }
 
-.recipes__iframes{
+.recipes__iframe{
   border: 0;
   width: 480px;
   height: 273px;
