--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: auto;
-  font-family: Inter, Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -148,3 +148,93 @@ padding: 0;
   margin-top: 24px;
 }
 
+.reservation{
+  padding: 100px 0 120px;
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: none;
+  background-size: cover;
+  background-position: center;
+}
+
+.form__title{
+  margin:0 0 80px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px
+}
+
+.reservation__form{
+  margin: 0 auto;
+}
+
+.form{
+  max-width: 385px;
+}
+
+.form__label{
+  color: #000;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px
+}
+
+.form__fieldset{
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.form__input{
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  margin: 8px 0 32px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__imput::placeholder{
+  color: #838383
+}
+
+.form__button{
+  padding: 20px 0;
+  width: 100%;
+  margin-bottom: 32px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #1878DC;
+  transition: 1s;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover{
+ background-color: #3f96f3;
+ cursor: pointer;
+}
+
+.form__checkbox{
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  background-color: #1878DC;
+  background-image: url(../images/check.svg);
+}
+
+.form__checkbox:hover{
+  cursor: pointer;
+}
+
+.form__label_type_checkbox{
+display: flex;
+gap: 12px;
+justify-content: center;
+}
