--- a/pages/index.css
+++ b/pages/index.css
@@ -157,7 +157,7 @@ padding: 0;
   background-position: center;
 }
 
-.form__title{
+.reservation__title{
   margin:0 0 80px;
   text-align: center;
   font-weight: 500;
