--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,21 +1,22 @@
-.form{
+.form {
   max-width: 385px;
 }
 
-.form__label{
+.form__label {
   color: #000;
   font-weight: 500;
   font-size: 16px;
-  line-height: 20px
+  line-height: 20px;
+  font-family: "Inter", "Arial", sans-serif;
 }
 
-.form__fieldset{
+.form__fieldset {
   margin: 0;
   padding: 0;
   border: none;
 }
 
-.form__input{
+.form__input {
   display: block;
   width: 100%;
   box-sizing: border-box;
@@ -27,44 +28,44 @@
   line-height: 30px;
 }
 
-.form__imput::placeholder{
-  color: #838383
+.form__input::placeholder {
+  color: #838383;
 }
 
-.form__button{
+.form__button {
   padding: 20px 0;
   width: 100%;
   margin-bottom: 32px;
   border: none;
   border-radius: 4px;
   color: #fff;
-  background-color: #1878DC;
+  background-color: #1878dc;
   transition: 1s;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  transition: background-color .5s;
-}
-
-.form__button:hover{
- background-color: #3f96f3;
- cursor: pointer;
-}
-
-.form__checkbox{
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  background-color: #1878DC;
-  background-image: url(../images/check.svg);
-}
-
-.form__checkbox:hover{
+  transition: background-color 0.5s;
   cursor: pointer;
 }
 
-.form__label_type_checkbox{
-display: flex;
-gap: 12px;
-justify-content: center;
+.form__button:hover {
+  background-color: #3f96f3;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  background-color: #1878dc;
+  background-image: url(../images/check.svg);
+}
+
+.form__checkbox:hover {
+  cursor: pointer;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
 }
