--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,4 @@
-.header{
+.header {
   height: 800px;
   padding: 30px 80px 40px;
   background-color: #fff;
@@ -10,7 +10,7 @@
   background-size: cover;
 }
 
-.header__title{
+.header__title {
   max-width: 729px;
   margin: 183px 0 0;
   font-weight: 500;
@@ -19,7 +19,7 @@
   letter-spacing: -0.6px;
 }
 
-.header__description{
+.header__description {
   max-width: 683px;
   margin: 28px 0 0;
   font-family: "Noto Serif", "Times New Roman", serif;
@@ -28,23 +28,22 @@
   line-height: 30px;
 }
 
-.header__span-accent{
+.header__span-accent {
   display: block;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
-  color: #3F96F3;
-
+  color: #3f96f3;
 }
 
-.header__image{
+.header__image {
   position: absolute;
   top: 124px;
   right: 5px;
-  width: 646px;
-  height: 568px;
+  max-width: 646px;
+  max-height: 568px;
 }
 
-.header__footer{
+.header__footer {
   margin-top: auto;
   display: flex;
   justify-content: space-between;
@@ -53,10 +52,9 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #6f6f6f
+  color: #6f6f6f;
 }
 
-
-.header__paragraph{
+.header__paragraph {
   margin: 0;
 }
