--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,32 +1,32 @@
-.nav{
+.nav {
   display: flex;
   justify-content: space-between;
 }
 
-.nav__logo{
+.nav__logo {
   width: 105px;
   height: 39px;
   position: relative;
   left: -50px;
 }
 
-.nav__links{
-display: flex;
-gap: 20px;
-list-style-type: none;
-margin: 0;
-padding: 0;
+.nav__links {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-.nav__link{
+.nav__link {
   color: #000;
   text-decoration: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  transition: opacity .5s;
+  transition: color 0.3s ease;
 }
 
-.nav__link:hover{
-opacity: .5;
+.nav__link:hover {
+  color: #2f80ed;
 }
